# atca-training

./: CMakeLists.txt  Doxyfile  README.md  valgrind_readline_suppression
apps/summariser/: Makefile  summariser.c
rpfits/: reader.c  reader.h
src/apps/nspd/: README.md  nspd.c
src/apps/nvis/: README.md  nvis.c
src/apps/rpfitsfile_server/: README.md  rpfitsfile_server.c
src/apps/summariser/: summariser  summariser.c
src/apps/visplot/: visplot.c
src/include/: memory.h
src/rpfits/: Makefile  atrpfits.c  atrpfits.h  compute.c  compute.h  reader.c  reader.h
tutorials/1_introduction/: README.md
tutorials/2_dcal_and_delavg/: README.md
tutorials/3_acal_and_tsys/: README.md
tutorials/4_challenging_calibration/: README.md
